<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameActivity">
    <item
        android:background="@color/endGradient3"
        android:id="@+id/restart"
        android:title="@string/restart"
        android:orderInCategory="2"
        app:showAsAction="never">

    </item>
    <item
        android:background="@drawable/all"
        android:id="@+id/exit"
        android:title="@string/button3"
        android:orderInCategory="3"
        app:showAsAction="never">


    </item>
    <item
        android:title="@string/back"
        android:orderInCategory="1"
        android:id="@+id/back"
        app:showAsAction="never">

    </item>


</menu>
