<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/textura">

    <com.google.android.gms.ads.doubleclick.PublisherAdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/publisherAdView"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="0dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6617610808798148/2807051038"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.509"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="1.0">

    </com.google.android.gms.ads.doubleclick.PublisherAdView>

    <Button
        android:id="@+id/button"

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/all"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/button"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/all"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/all"
        android:text="@string/button3" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/endGradient2"
        android:textSize="25sp" />


</RelativeLayout>